--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
 /* TODO Add site wide styles */
-* {
-  background-color: lightgray;
+html {
+  height: 100%;
+  margin: 0;
+  background-image: linear-gradient(to bottom right, lightblue, white);
+}
+
+
+.nav-link{
+  font-size: 20px;
 }
